--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,25 @@
+# Define the events section
+events {
+    worker_connections 1024;
+}
+
+# Main HTTP block
 http {
+    # Upstream configuration for load balancing
     upstream springboot {
-        server app:8080;  # app refers to the name of the Docker service in docker-compose
-        server app:8080;
         server app:8080;
     }
 
+    # Server block to handle requests
     server {
         listen 80;
 
         location / {
             proxy_pass http://springboot;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
